Fix active track title overflow

--- a/src/styles/active-track.styl
+++ b/src/styles/active-track.styl
@@ -8,17 +8,13 @@
   font-family: 'Roboto', sans-serif
   font-weight: 300
 
-.active-track-play-btn
-  width: 40px
-  height: @width
-  background-color: #F44336
-  margin: 15px
-
 .active-track-artist
   font-weight: 500
 
 .active-track-duration
   margin: 0 15px
+  min-width: 50px
+  text-align: right
 
 .active-track-separator
   margin: 0 3px
@@ -27,4 +23,3 @@
   text-overflow: ellipsis
   white-space: nowrap
   overflow: hidden
-  padding: 0 10px
